# django-pollster

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
django-polls/: MANIFEST.in  README.rst  pyproject.toml
django-polls/django_polls/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
django-polls/django_polls/migrations/: 0001_initial.py  __init__.py
django-polls/django_polls/templates/polls/: detail.html
django_pollster/: __init__.py  manage.py
django_pollster/polls/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
django_pollster/polls/migrations/: __init__.py
django_pollster/polls/templates/polls/: index.html
django_pollster/pollster/: __init__.py  admin.py  asgi.py  settings.py  urls.py  wsgi.py
django_pollster/templates/admin/: base_site.html
